fw variable selection with collapsed chromatin states and removed redundant variables

--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -584,7 +584,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 864x864 with 2 Axes>,\n",
-       " <matplotlib.axes._subplots.AxesSubplot at 0x7fd4ac366890>)"
+       " <matplotlib.axes._subplots.AxesSubplot at 0x7f93082e4610>)"
       ]
      },
      "execution_count": 6,
@@ -640,6 +640,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collinear_cols = ['DP_std', 'FS_std', 'SOR_mean', 'SOR_std', 'szdbCNVcount_std', 'GWASpval_std']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -650,14 +659,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = preprocessing.preprocess(data)\n",
-    "# we remove the marginal modes since these are all degenerate variables\n",
-    "cols2drop = [y for y in data1.columns if re.match('.*_marg_mode', y)]\n",
-    "data1 = data1.drop(columns=cols2drop)"
+    "def preprocess_filter(data, c2d=collinear_cols):\n",
+    "    data1 = preprocessing.preprocess(data)\n",
+    "    # we remove the marginal modes since these are all degenerate variables\n",
+    "    cols2drop = [y for y in data1.columns if re.match('.*_marg_mode', y)]\n",
+    "    data1 = data1.drop(columns=cols2drop + c2d)\n",
+    "    return(data1)\n",
+    "\n",
+    "data1 = preprocess_filter(data, c2d=[]) # we omit the removing of collinear_cols"
    ]
   },
   {
@@ -669,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +700,7 @@
        "'Dx ~ AntipsychAtyp + YearofAutopsy + AntipsychTyp + EV3 + Institution + Benzodiazepines + causeOfDeath + Ethnicity + SOR_std + DP_std + DP_mean + ageOfDeath + evolConstrain_entropy + Alcohol + ReportedGender + REF_frequency + VQSLOD_std + BrainWeightingrams + BaseQRankSum_mean + REF_entropy + FILTERPASS_entropy + Antidepress + szdbCNVcount_mean + EV1 + 1'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +732,7 @@
        "  <th>Date:</th>             <td>Tue, 01 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>3.35e-12</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:45:05</td>     <th>  Log-Likelihood:    </th> <td>  18.279</td>\n",
+       "  <th>Time:</th>                 <td>23:39:28</td>     <th>  Log-Likelihood:    </th> <td>  18.279</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    85</td>      <th>  AIC:               </th> <td>   21.44</td>\n",
@@ -850,7 +863,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.725\n",
        "Method:                 Least Squares   F-statistic:                     8.903\n",
        "Date:                Tue, 01 Sep 2020   Prob (F-statistic):           3.35e-12\n",
-       "Time:                        18:45:05   Log-Likelihood:                 18.279\n",
+       "Time:                        23:39:28   Log-Likelihood:                 18.279\n",
        "No. Observations:                  85   AIC:                             21.44\n",
        "Df Residuals:                      56   BIC:                             92.28\n",
        "Df Model:                          28                                         \n",
@@ -899,7 +912,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1039,7 @@
        "Text(0.5, 0.98, 'no. calls and read depth')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1060,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1122,7 @@
        "Name: (nCalls, count), Length: 85, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1164,7 @@
        "Name: CMC_MSSM_224, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,16 +1182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best2 = fwsel.forward_selected(data1, 'nCalls_count')"
+    "best1 = fwsel.forward_selected(data1, 'nCalls_count')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1187,18 +1200,18 @@
        "'nCalls_count ~ DP_mean + culprit_entropy + Ethnicity + AF_mean + ReportedGender + DP_std + AntipsychAtyp + YearofAutopsy + Anticonvulsants + szdbCNVcount_std + REF_entropy + EV1 + EV3 + evolConstrain_frequency + Lithium + Antidepress + 1'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best2.model.formula"
+    "best1.model.formula"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1232,7 @@
        "  <th>Date:</th>             <td>Tue, 01 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>2.86e-13</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:45:21</td>     <th>  Log-Likelihood:    </th> <td> -63.892</td>\n",
+       "  <th>Time:</th>                 <td>23:39:44</td>     <th>  Log-Likelihood:    </th> <td> -63.892</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    85</td>      <th>  AIC:               </th> <td>   163.8</td>\n",
@@ -1317,7 +1330,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.666\n",
        "Method:                 Least Squares   F-statistic:                     10.85\n",
        "Date:                Tue, 01 Sep 2020   Prob (F-statistic):           2.86e-13\n",
-       "Time:                        18:45:21   Log-Likelihood:                -63.892\n",
+       "Time:                        23:39:44   Log-Likelihood:                -63.892\n",
        "No. Observations:                  85   AIC:                             163.8\n",
        "Df Residuals:                      67   BIC:                             207.8\n",
        "Df Model:                          17                                         \n",
@@ -1355,13 +1368,152 @@
        "\"\"\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best2.summary()"
+    "best1.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove redundant (collinear) columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = preprocess_filter(data, c2d=collinear_cols) # we remove collinear_cols\n",
+    "best2 = fwsel.forward_selected(data2, 'nCalls_count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nCalls_count ~ DP_mean + culprit_entropy + Ethnicity + AF_mean + ReportedGender + YearofAutopsy + AntipsychAtyp + Antidepress + PMIinhours + FILTERPASS_entropy + culprit_frequency + VQSLOD_mean + BrainWeightingrams + REF_frequency + 1'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best2.model.formula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selected variables in `best1.model` that persisted in `best2.model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AF_mean',\n",
+       " 'Antidepress[T.1]',\n",
+       " 'AntipsychAtyp[T.1]',\n",
+       " 'DP_mean',\n",
+       " 'Ethnicity[T.Caucasian]',\n",
+       " 'Ethnicity[T.Hispanic]',\n",
+       " 'Intercept',\n",
+       " 'ReportedGender[T.Male]',\n",
+       " 'YearofAutopsy',\n",
+       " 'culprit_entropy'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(best2.model.exog_names).intersection(set(best1.model.exog_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selected variables in `best2.model` that weren't selected in `best1.model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BrainWeightingrams',\n",
+       " 'FILTERPASS_entropy',\n",
+       " 'PMIinhours',\n",
+       " 'REF_frequency',\n",
+       " 'VQSLOD_mean',\n",
+       " 'culprit_frequency'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(best2.model.exog_names) - set(best1.model.exog_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously selected variables that dropped out in `best2.model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Anticonvulsants[T.1]',\n",
+       " 'DP_std',\n",
+       " 'EV1',\n",
+       " 'EV3',\n",
+       " 'Lithium[T.1]',\n",
+       " 'REF_entropy',\n",
+       " 'evolConstrain_frequency',\n",
+       " 'szdbCNVcount_std'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(best1.model.exog_names) - set(best2.model.exog_names)"
    ]
   },
   {
@@ -1377,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,27 +1541,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "aggcalls_tss = individuals.agg_calls(calls_tss)\n",
     "data_tss = pd.concat([aggcalls_tss, clin], axis=1)\n",
-    "data_tss1 = preprocessing.preprocess(data_tss)"
+    "data2_tss = preprocess_filter(data_tss, c2d=collinear_cols) # we remove collinear_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1_tss = data1_tss.drop(columns=cols2drop)"
+    "best2_tss = fwsel.forward_selected(data2_tss, 'nCalls_count')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nCalls_count ~ DP_mean + culprit_entropy + Ethnicity + AF_mean + ReportedGender + YearofAutopsy + AntipsychAtyp + Antidepress + PMIinhours + FILTERPASS_entropy + culprit_frequency + VQSLOD_mean + BrainWeightingrams + REF_frequency + 1'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best2_tss.model.formula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selected variables in `best2.model` that persisted in `best2_tss.model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AF_mean',\n",
+       " 'Antidepress[T.1]',\n",
+       " 'AntipsychAtyp[T.1]',\n",
+       " 'BrainWeightingrams',\n",
+       " 'DP_mean',\n",
+       " 'Ethnicity[T.Caucasian]',\n",
+       " 'Ethnicity[T.Hispanic]',\n",
+       " 'FILTERPASS_entropy',\n",
+       " 'Intercept',\n",
+       " 'PMIinhours',\n",
+       " 'REF_frequency',\n",
+       " 'ReportedGender[T.Male]',\n",
+       " 'VQSLOD_mean',\n",
+       " 'YearofAutopsy',\n",
+       " 'culprit_entropy',\n",
+       " 'culprit_frequency'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(best2_tss.model.exog_names).intersection(set(best2.model.exog_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selected variables in `best2_tss.model` that weren't selected in `best2.model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(best2_tss.model.exog_names) - set(best2.model.exog_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously selected variables in `best2.model` that dropped out in `best2_tss.model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(best2.model.exog_names) - set(best2_tss.model.exog_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
