Can already import near_gens.txt but cannot yet merge into calls due to overlapping genes

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -35,11 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "calls = individuals.get_data(merge=True, cleancalls=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overlapping genes\n",
+    "\n",
+    "[This article](https://www.nature.com/articles/s41598-019-49802-w) presents a study of overlapping genes and shows that sometimes more than 5 genes may overlap at a locus.  This means that for each variant I should come up with a---possibly empty---set of genes that overlap that variant."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Roadmap epigenome annotation of SNPnexus: what does it exactly mean?\n",
+    "* mutation types (A/C, ...): how does the mutational spectrum in the outlier sample compare to that in other samples?"
    ]
   },
   {
