adding methods for SNPnexus use

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -46,9 +46,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Overlapping genes\n",
+    "## Annotation with SNPnexus\n",
+    "[SNPnexus](https://www.snp-nexus.org/v4/) is a recently updated web service that uses numerous databases to annotate human genomic variants (see [this article](https://academic.oup.com/nar/article/48/W1/W185/5851388)).  The short sections below present information regarding the way I used SNPnexus to annotate our somatic variant calls.  The following settings were used:\n",
     "\n",
-    "[This article](https://www.nature.com/articles/s41598-019-49802-w) presents a study of overlapping genes and shows that sometimes more than 5 genes may overlap at a locus.  This means that for each variant I should come up with a---possibly empty---set of genes that overlap that variant."
+    "* Human Assembly: GRCh37/hg19\n",
+    "* filtered VCF files were uploaded\n",
+    "* all annotation categories were selected\n",
+    "* *TXT per annotation*\n",
+    "\n",
+    "### Overlapping genes\n",
+    "A key annotation of *Overlapped and Nearest Genes*, stored in the `near_gens.txt` output file of SNPnexus.  Each variant is overlapped by zero, one or more genes. In the last case two or more genes overlap each other around the given variant and `near_gens.txt` lists the same variant in multiple rows corresponding to the multiple overlapping genes. Since my `calls` DataFrame must contain exactly one row for each variant I collapsed those multiple rows into one by listing the overlapping genes in a single colon (`:`) separated string.\n",
+    "\n",
+    "[This article](https://www.nature.com/articles/s41598-019-49802-w) presents a study of overlapping genes and shows that sometimes more than 5 genes may overlap at a locus.  This means that for each variant I should come up with a---possibly empty---set of genes that overlap that variant.\n",
+    "\n",
+    "### Set of"
    ]
   },
   {
