--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -9,24 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%reload_ext autoreload\n",
     "from bsmcalls import individuals\n",
     "from bsmcalls import readVCF\n",
+    "from bsmcalls import SNPnexus\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
@@ -35,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +51,52 @@
     "\n",
     "[This article](https://www.nature.com/articles/s41598-019-49802-w) presents a study of overlapping genes and shows that sometimes more than 5 genes may overlap at a locus.  This means that for each variant I should come up with a---possibly empty---set of genes that overlap that variant.\n",
     "\n",
-    "### Set of"
+    "### Selecting sets of annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotlist = ['near_gens', 'sift']\n",
+    "annot = SNPnexus.get_multi_annotations(annotlist=annotlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "MultiIndex: 54 entries, ('CMC_MSSM_027', 'NeuN_pl', '11', 22272365, 'A/T') to ('CMC_PITT_118', 'NeuN_pl', '2', 29124973, 'T/G')\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   (sift, Variation ID)  54 non-null     object \n",
+      " 1   (sift, Chromosome)    54 non-null     object \n",
+      " 2   (sift, Position)      54 non-null     int64  \n",
+      " 3   (sift, dbSNP)         54 non-null     object \n",
+      " 4   (sift, Variant)       54 non-null     object \n",
+      " 5   (sift, Transcript)    54 non-null     object \n",
+      " 6   (sift, Gene)          54 non-null     object \n",
+      " 7   (sift, AA Position)   54 non-null     int64  \n",
+      " 8   (sift, Wild AA)       54 non-null     object \n",
+      " 9   (sift, Mutant AA)     54 non-null     object \n",
+      " 10  (sift, Score)         54 non-null     float64\n",
+      " 11  (sift, Prediction)    54 non-null     object \n",
+      "dtypes: float64(1), int64(2), object(9)\n",
+      "memory usage: 6.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "annot.info()"
    ]
   },
   {
@@ -72,21 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 45443,\n",
-      "  \"iopub_port\": 37111,\n",
-      "  \"stdin_port\": 58793,\n",
-      "  \"control_port\": 46605,\n",
-      "  \"hb_port\": 58091,\n",
+      "  \"shell_port\": 40925,\n",
+      "  \"iopub_port\": 54783,\n",
+      "  \"stdin_port\": 41135,\n",
+      "  \"control_port\": 40913,\n",
+      "  \"hb_port\": 46773,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"24517aa9-a0f2d823a7f00e3f6f4e0143\",\n",
+      "  \"key\": \"aed42e55-7b2193f7796169674f71a8b0\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -95,7 +134,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-2e273e0a-3a49-4064-ba8b-ea345f18c80c.json\n",
+      "    $> jupyter <app> --existing kernel-e73fc0b8-35d2-4223-8979-5afa91e20980.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
