dtype dependent treatment of columns to process in annot DataFrame

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -60,18 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 162,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "annotlist = ['sift', 'phast', 'gerp']\n",
+    "cols2binarize = ['phast_Score', 'gerp_Element RS Score']\n",
     "#annotlist = ['near_gens', 'sift']\n",
     "annot = SNPnexus.get_multi_annotations(annotlist=annotlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -79,37 +82,39 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "MultiIndex: 390 entries, ('CMC_MSSM_027', 'NeuN_pl', '11', 22272365, 'A/T') to ('CMC_PITT_118', 'NeuN_pl', '4', 90071260, 'G/A')\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   sift_Variation ID      54 non-null     object \n",
-      " 1   sift_Chromosome        54 non-null     object \n",
-      " 2   sift_Position          54 non-null     float64\n",
-      " 3   sift_dbSNP             54 non-null     object \n",
-      " 4   sift_Variant           54 non-null     object \n",
-      " 5   sift_Transcript        54 non-null     object \n",
-      " 6   sift_Gene              54 non-null     object \n",
-      " 7   sift_AA Position       54 non-null     float64\n",
-      " 8   sift_Wild AA           54 non-null     object \n",
-      " 9   sift_Mutant AA         54 non-null     object \n",
-      " 10  sift_Score             54 non-null     float64\n",
-      " 11  sift_Prediction        54 non-null     object \n",
-      " 12  phast_Variation ID     231 non-null    object \n",
-      " 13  phast_Chromosome       231 non-null    object \n",
-      " 14  phast_Region Start     231 non-null    float64\n",
-      " 15  phast_Region End       231 non-null    float64\n",
-      " 16  phast_Id               231 non-null    object \n",
-      " 17  phast_Score            231 non-null    float64\n",
-      " 18  gerp_Variation ID      340 non-null    object \n",
-      " 19  gerp_Position          340 non-null    float64\n",
-      " 20  gerp_Chromosome        340 non-null    object \n",
-      " 21  gerp_Region Start      340 non-null    float64\n",
-      " 22  gerp_Region End        340 non-null    float64\n",
-      " 23  gerp_Element RS Score  340 non-null    float64\n",
-      " 24  gerp_Base RS Score     340 non-null    float64\n",
-      "dtypes: float64(11), object(14)\n",
-      "memory usage: 82.7+ KB\n"
+      "MultiIndex: 3411 entries, ('CMC_MSSM_027', 'NeuN_pl', '1', 11973569, 'C/T') to ('CMC_MSSM_331', 'muscle', '17', 29109599, 'T/G')\n",
+      "Data columns (total 27 columns):\n",
+      " #   Column                     Non-Null Count  Dtype   \n",
+      "---  ------                     --------------  -----   \n",
+      " 0   sift_Variation ID          54 non-null     object  \n",
+      " 1   sift_Chromosome            54 non-null     object  \n",
+      " 2   sift_Position              54 non-null     float64 \n",
+      " 3   sift_dbSNP                 54 non-null     object  \n",
+      " 4   sift_Variant               54 non-null     object  \n",
+      " 5   sift_Transcript            54 non-null     object  \n",
+      " 6   sift_Gene                  54 non-null     object  \n",
+      " 7   sift_AA Position           54 non-null     float64 \n",
+      " 8   sift_Wild AA               54 non-null     object  \n",
+      " 9   sift_Mutant AA             54 non-null     object  \n",
+      " 10  sift_Score                 54 non-null     float64 \n",
+      " 11  sift_Prediction            54 non-null     object  \n",
+      " 12  phast_Variation ID         231 non-null    object  \n",
+      " 13  phast_Chromosome           231 non-null    object  \n",
+      " 14  phast_Region Start         231 non-null    float64 \n",
+      " 15  phast_Region End           231 non-null    float64 \n",
+      " 16  phast_Id                   231 non-null    object  \n",
+      " 17  phast_Score                231 non-null    float64 \n",
+      " 18  phast_Score_bin            3411 non-null   category\n",
+      " 19  gerp_Variation ID          340 non-null    object  \n",
+      " 20  gerp_Position              340 non-null    float64 \n",
+      " 21  gerp_Chromosome            340 non-null    object  \n",
+      " 22  gerp_Region Start          340 non-null    float64 \n",
+      " 23  gerp_Region End            340 non-null    float64 \n",
+      " 24  gerp_Element RS Score      340 non-null    float64 \n",
+      " 25  gerp_Element RS Score_bin  3411 non-null   category\n",
+      " 26  gerp_Base RS Score         340 non-null    float64 \n",
+      "dtypes: category(2), float64(11), object(14)\n",
+      "memory usage: 723.3+ KB\n"
      ]
     }
    ],
