fixed checking for NaNs in binarize_cols

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
    "metadata": {
     "scrolled": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 93,
    "metadata": {
     "scrolled": true
    },
@@ -83,7 +83,7 @@
    "source": [
     "cols2binarize = []\n",
     "cols2binarize += ['1KGen_AFR Frequency', '1KGen_AMR Frequency', '1KGen_EAS Frequency', '1KGen_EUR Frequency', '1KGen_SAS Frequency']\n",
-    "#cols2binarize += ['cpg_CpG Island']\n",
+    "cols2binarize += ['cpg_CpG Island']\n",
     "cols2binarize += ['gerp_Element RS Score']\n",
     "cols2binarize += ['phast_Score']\n",
     "annot = SNPnexus.binarize_cols(cols2binarize, annot, calls, suffix='_bin')"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
