--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        " 'structvar_Type_other']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,17 +668,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(<Figure size 576x576 with 2 Axes>,\n",
-       " <matplotlib.axes._subplots.AxesSubplot at 0x7f0a143e15d0>)"
+       " <matplotlib.axes._subplots.AxesSubplot at 0x7f29e772c250>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "Text(0.5, 1.0, 'Correlation with Dx_SCZ')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "Text(0.5, 1.0, 'gerp_Base vs gerp_Element')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -808,6 +808,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Export data as `annotated-calls.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('/home/attila/projects/bsm/results/2020-09-07-annotations/annotated-calls.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Andy's questions\n",
     "\n",
     "* Roadmap epigenome annotation of SNPnexus: what does it exactly mean?\n",
@@ -818,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -828,13 +844,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 56821,\n",
-      "  \"iopub_port\": 33867,\n",
-      "  \"stdin_port\": 40159,\n",
-      "  \"control_port\": 51903,\n",
-      "  \"hb_port\": 36051,\n",
+      "  \"shell_port\": 47381,\n",
+      "  \"iopub_port\": 43493,\n",
+      "  \"stdin_port\": 49341,\n",
+      "  \"control_port\": 57677,\n",
+      "  \"hb_port\": 46639,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"8ab6d16f-ae4f8c4b9fbae567cb933347\",\n",
+      "  \"key\": \"61a66e7d-c2339c8d299e8b993f003320\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -843,7 +859,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-4ced6910-0ed1-40c4-8673-fc54c5733a65.json\n",
+      "    $> jupyter <app> --existing kernel-89bf0cc3-0ca3-4a02-8149-5da4fd343ee1.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -867,18 +883,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
