--- a/notebook/2020-09-28-wgs-data-other-groups/2020-09-28-wgs-data-other-groups.ipynb
+++ b/notebook/2020-09-28-wgs-data-other-groups/2020-09-28-wgs-data-other-groups.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome, Attila Jones!\n",
-      "\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +158,7 @@
        "      <th></th>\n",
        "      <th>subjectkey</th>\n",
        "      <th>phenotype</th>\n",
+       "      <th>sample_description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -165,6 +166,7 @@
        "      <th>0</th>\n",
        "      <td>NDARED547KHB</td>\n",
        "      <td>Global Geriatric Decline</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -259,6 +261,7 @@
        "      <th></th>\n",
        "      <th>subjectkey</th>\n",
        "      <th>phenotype</th>\n",
+       "      <th>sample_description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -266,26 +269,31 @@
        "      <th>5</th>\n",
        "      <td>NDARGV580CWV</td>\n",
        "      <td>Control</td>\n",
+       "      <td>cerebellum</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>NDAREU049CBP</td>\n",
        "      <td>Control</td>\n",
+       "      <td>cerebellum</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>NDARRX596NEB</td>\n",
        "      <td>Schizophrenia</td>\n",
+       "      <td>cerebellum</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>NDARRH300TMK</td>\n",
        "      <td>Schizophrenia</td>\n",
+       "      <td>cerebellum</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>NDARRY635XWH</td>\n",
        "      <td>Schizophrenia</td>\n",
+       "      <td>cerebellum</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -380,6 +388,7 @@
        "      <th></th>\n",
        "      <th>subjectkey</th>\n",
        "      <th>phenotype</th>\n",
+       "      <th>sample_description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -387,26 +396,31 @@
        "      <th>24</th>\n",
        "      <td>NDAR_INV51J7Y022</td>\n",
        "      <td>No Diagnosis on Axis I</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>NDAR_INVY99VUP0G</td>\n",
        "      <td>Bipolar I MRE Manic Psychotic, Alcohol Abuse</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>NDAR_INV9VKLJAM4</td>\n",
        "      <td>No Diagnosis on Axis I</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>NDAR_INV9VE3YNDH</td>\n",
        "      <td>Bipolar I MRE Depressed Psychotic, Opioid Dependence</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>NDAR_INV6RXY2HC3</td>\n",
        "      <td>No Diagnosis on Axis I</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -501,6 +515,7 @@
        "      <th></th>\n",
        "      <th>subjectkey</th>\n",
        "      <th>phenotype</th>\n",
+       "      <th>sample_description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -508,26 +523,31 @@
        "      <th>11</th>\n",
        "      <td>NDAR_INVDNRXJ41X</td>\n",
        "      <td>control</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>NDAR_INVEUAH999H</td>\n",
        "      <td>control</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>NDAR_INV260ECBT8</td>\n",
        "      <td>control</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>NDAR_INVRD5V510Y</td>\n",
        "      <td>control</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>NDAR_INVZFPD5Z6V</td>\n",
        "      <td>control</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -622,6 +642,7 @@
        "      <th></th>\n",
        "      <th>subjectkey</th>\n",
        "      <th>phenotype</th>\n",
+       "      <th>sample_description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -629,26 +650,31 @@
        "      <th>74</th>\n",
        "      <td>NDAR_INVMR608HT9</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>saliva</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
        "      <td>NDAR_INVLA347WBF</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>saliva</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76</th>\n",
        "      <td>NDARYX624FEY</td>\n",
        "      <td>Autism</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
        "      <td>NDAR_INVTN706HNW</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
        "      <td>NDAR_INVVH788TM6</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>frontal cortex</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -743,6 +769,7 @@
        "      <th></th>\n",
        "      <th>subjectkey</th>\n",
        "      <th>phenotype</th>\n",
+       "      <th>sample_description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -750,26 +777,31 @@
        "      <th>17</th>\n",
        "      <td>NDARUG441NXW</td>\n",
        "      <td>Schizophrenia</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>NDARRX596NEB</td>\n",
        "      <td>Schizophrenia</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>NDARRY635XWH</td>\n",
        "      <td>Schizophrenia</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>NDARRT904HJE</td>\n",
        "      <td>Control</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>NDARUB276TVW</td>\n",
        "      <td>Schizophrenia</td>\n",
+       "      <td>brain</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -792,7 +824,7 @@
    ],
    "source": [
     "bcols = ['subjectkey', 'disorder', 'sample_id_original', 'celltype', 'br_reg']\n",
-    "scols = ['subjectkey', 'phenotype']\n",
+    "scols = ['subjectkey', 'phenotype', 'sample_description']\n",
     "for PI in btb02s.keys():\n",
     "    print(PI)\n",
     "    m = btb02s[PI]\n",
@@ -813,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +987,7 @@
        "Text(0.5, 1.0, 'Number of control samples')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -988,22 +1020,14 @@
     "\n",
     "* The Gleeson data set may be excluded because it's based on a single individual with Global Geriatric Decline\n",
     "* The Moran data set is also to be excluded because it's only from cerebellar samples\n",
-    "* The Pevsner data set contains 10 control individuals but it's not clear what brain region was sampled.  **TODO**: clarify this!\n",
+    "* The Pevsner data set contains 10 frontal cortex samples from control individuals\n",
     "* The Walsh data set has 15 frontal cortex samples, each from a distinct control individual\n",
     "* The Weinberger DLPFC control samples are marked by one of three neuronal markers (or are marked as triple negative).  **TODO**: Find out which of those samples might be useful! "
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Discussion with Andy\n",
-    "Do we have any variants in or near neurexin?  Neurexin 1-3"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1011,13 +1035,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 43533,\n",
-      "  \"iopub_port\": 44697,\n",
-      "  \"stdin_port\": 54609,\n",
-      "  \"control_port\": 33267,\n",
-      "  \"hb_port\": 33043,\n",
+      "  \"shell_port\": 35059,\n",
+      "  \"iopub_port\": 35485,\n",
+      "  \"stdin_port\": 48437,\n",
+      "  \"control_port\": 39563,\n",
+      "  \"hb_port\": 34159,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"6bcc92b1-60de828a5fc4bbb740c51028\",\n",
+      "  \"key\": \"daa1dd43-0df85f5ba39820a08f70aded\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1026,7 +1050,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-8d563fca-5218-40dc-a08e-c826d45d39ab.json\n",
+      "    $> jupyter <app> --existing kernel-71d21492-adaa-4623-a775-cc4451efc35d.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
