joint and conditional kde for RD and AF

--- a/notebook/2020-10-06-progress-report/2020-10-06-progress-report.ipynb
+++ b/notebook/2020-10-06-progress-report/2020-10-06-progress-report.ipynb
@@ -57,7 +57,10 @@
     "        * based on different study subjects, usually estimates of population parameters\n",
     "    1. previous studies: data bases and publications that annotate genomic coordinates sometimes in a tissue specific manner; SNPnexus server\n",
     "1. Exploration of data\n",
-    "    * Fig: correlation matrix; some notable correlations"
+    "    * Fig: correlation matrix; some notable correlations\n",
+    "    * Fig: correlation with Dx variable is strong for some clinical variables; discuss in terms of causality why {ethnicity, sex} but not {antipsych, manner of death,...} need to be included in a regression model!\n",
+    "1. Statistical modeling\n",
+    "    * nested observations + high information content of some clinical variables for Dx => least squares regression on Dx"
    ]
   },
   {
